--- a/FootballScores/app/src/main/res/layout/fragment_match_detail.xml
+++ b/FootballScores/app/src/main/res/layout/fragment_match_detail.xml
@@ -42,9 +42,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawableLeft="@android:drawable/ic_menu_share"
+            android:drawableStart="@android:drawable/ic_menu_share"
             android:gravity="center"
             android:paddingLeft="120dp"
+            android:paddingStart="120dp"
             android:paddingRight="120dp"
+            android:paddingEnd="120dp"
             android:text="@string/share_text" />
 
     </FrameLayout>
