--- a/FootballScores/app/src/main/res/values-sw600dp/dimens.xml
+++ b/FootballScores/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,9 +1,11 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--Default screen margins, per the Android Design guidelines.-->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_horizontal_margin">120dp</dimen>
     <dimen name="share_button_margin">150dp</dimen>
+
+    <!--Text Size-->
     <dimen name="team_name_text_size">17sp</dimen>
     <dimen name="score_text_size">30sp</dimen>
     <dimen name="league_text_size">15sp</dimen>
