--- a/FootballScores/app/src/main/res/values/dimens.xml
+++ b/FootballScores/app/src/main/res/values/dimens.xml
@@ -1,10 +1,19 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!--Default screen margins, per the Android Design guidelines.-->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="list_horizontal_margin">2dp</dimen>
     <dimen name="share_button_margin">150dp</dimen>
+
+    <!--Text Sizes-->
     <dimen name="team_name_text_size">17sp</dimen>
     <dimen name="score_text_size">30sp</dimen>
     <dimen name="league_text_size">15sp</dimen>
+
+    <!--
+        Widget
+        Refer to App Widget Documentation for margin information
+        http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
