--- a/FootballScores/app/src/main/res/layout/activity_about.xml
+++ b/FootballScores/app/src/main/res/layout/activity_about.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="barqsoft.footballscores.AboutActivity"
+    tools:context=".ui.about.AboutActivity"
     tools:ignore="MergeRootFrame" />
