--- a/FootballScores/app/src/main/res/layout/activity_main.xml
+++ b/FootballScores/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green13"
-    tools:context=".MainActivity"
+    tools:context=".ui.scores.MainActivity"
     tools:ignore="MergeRootFrame" />
 
