--- a/FootballScores/app/src/main/res/layout/fragment_score_list.xml
+++ b/FootballScores/app/src/main/res/layout/fragment_score_list.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".ui.scores.MainActivity">
 
     <ListView
         android:id="@+id/score_list"
