--- a/FootballScores/app/src/main/res/menu/menu_main.xml
+++ b/FootballScores/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".ui.scores.MainActivity">
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
         android:title="@string/about"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="110"
+        android:title="@string/action_refresh"
         app:showAsAction="never" />
 </menu>
